fix dropdown menu. shrink header titles on mobile

--- a/src/components/base/header.styles.scss
+++ b/src/components/base/header.styles.scss
@@ -28,6 +28,7 @@ h6 {
 @media screen and (max-width: 514px) {
   .header-title {
     margin-top: 0;
+    font-size: 3rem;
   }
   .center {
     display: flex;
