--- a/src/navigation/navigation.styles.scss
+++ b/src/navigation/navigation.styles.scss
@@ -10,7 +10,8 @@
   }
 
   .nav-link {
-    margin-left: 20px;
+    margin-left: 5px;
+    padding-right: 20px;
     font-size: 1.2rem;
     color: #61892f !important;
 
@@ -25,13 +26,14 @@
   .dropdown {
     text-align: right;
     position: fixed;
+
     top: 20px;
     right: 45px;
     background-color: rgba(34, 38, 41, 0.9);
   }
 
   a.nav-link {
-    margin: 5px 15px;
+    margin: 5px 35px;
   }
 }
 
